--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"> <span><i data-feather='home'> </i></span> <span>Project Property</span> </a>
+    <a class="navbar-brand" href="#"> <span class="mx-3"><i data-feather='home'> </i></span> <span>Project Property</span> </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
