--- a/app/templates/properties.html
+++ b/app/templates/properties.html
@@ -5,6 +5,7 @@
 />
 {% endblock %} {% block main %}
 <div class="container-fluid py-5">
+  {% include 'flash.html' %}
   <h2 class="display-5 fw-bold">Properties</h2>
 
   <div class="row my-5">
